display a list of all scripts at startup so user can click them in the terminal

--- a/dist.ini
+++ b/dist.ini
@@ -38,6 +38,7 @@ Plack::Builder = 0
 Plack::App::CGIBin = 0
 CGI::Emulate::PSGI = 0
 CGI::Compile = 0
+File::Find::Rule = 0
 
 [Prereqs / RuntimeRecommends]
 Net::Rendezvous::Publish = 0
