add repository metadata

--- a/dist.ini
+++ b/dist.ini
@@ -43,6 +43,13 @@ File::Find::Rule = 0
 [Prereqs / RuntimeRecommends]
 Net::Rendezvous::Publish = 0
 
+[Metadata]
+resources.homepage          = https://github.com/simbabque/App-CGIThis
+resources.bugtracker.web    = https://github.com/simbabque/App-CGIThis/issues
+resources.repository.type   = git
+resources.repository.url    = https://github.com/simbabque/App-CGIThis.git
+resources.repository.web    = https://github.com/simbabque/App-CGIThis
+
 [CheckPrereqsIndexed]
 [Git::Contributors]
 [Meta::Contributors]
