--- a/dist.ini
+++ b/dist.ini
@@ -4,18 +4,15 @@ license = Perl_5
 copyright_holder = simbabque
 copyright_year   = 2017
 
-version = 0.003
+version = 0.004
 
-[GatherDir]
-exclude_match = .komodoproject$
-exclude_match = .*~ko-.*
+[Git::GatherDir]
 [PruneCruft]
-[ManifestSkip]
 [MetaJSON]
 [MetaYAML]
 [License]
 [Readme]
-[ExtraTests]
+[RunExtraTests]
 [ExecDir]
 [ShareDir]
 [MakeMaker]
@@ -42,18 +39,18 @@ File::Find::Rule = 0
 
 [Prereqs / RuntimeRecommends]
 Net::Rendezvous::Publish = 0
+[GithubMeta]
+issues=1
 
-[Metadata]
-resources.homepage          = https://github.com/simbabque/App-CGIThis
-resources.bugtracker.web    = https://github.com/simbabque/App-CGIThis/issues
-resources.repository.type   = git
-resources.repository.url    = https://github.com/simbabque/App-CGIThis.git
-resources.repository.web    = https://github.com/simbabque/App-CGIThis
-
+[MetaConfig]
+[CPANFile]
 [CheckPrereqsIndexed]
 [Git::Contributors]
-[Meta::Contributors]
+include_authors = 1
 [NextRelease]
 [TestRelease]
 [ConfirmRelease]
 [UploadToCPAN]
+
+[Git::Tag]
+[Git::Push]
